<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <include
        android:id="@+id/layoutToolbar"
        layout="@layout/layout_toolbar"/>

    <TableLayout
        android:layout_width="0dp"
        android:padding="16dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_email" />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:hint="@string/view_email"
                android:layout_weight="2"
                android:background="@drawable/shape_radius_white" />
        </TableRow>
        <TableRow android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_contact" />
            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/view_contact"
                android:layout_weight="2"
                android:background="@drawable/shape_radius_white" />
        </TableRow>
        <TableRow android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_postal_code" />
            <TextView
                android:id="@+id/tv_postal_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_weight="2"
                android:background="@drawable/shape_radius_white" />
        </TableRow>
        <TableRow android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_state" />
            <TextView
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_weight="2"
                android:background="@drawable/shape_radius_white" />
        </TableRow>
        <TableRow android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_address" />
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_weight="2"
                android:background="@drawable/shape_radius_white" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>